--- a/tetris.css
+++ b/tetris.css
@@ -3,10 +3,15 @@
     color: pink;
   }
 
-    #highScore {
-      display: inline-block;
-      color: pink;
-    }
+  #highScore {
+    display: inline-block;
+    color: pink;
+  }
+
+  #row {
+    display: inline-block;
+    color: pink;
+  }
 
   div {
     font-size: 25px;
@@ -25,6 +30,6 @@
     background-color: black;
   }
 
-  #scoreBoard { 
+  #scoreBoard {
     color: snow;
   }
