--- a/tetris.css
+++ b/tetris.css
@@ -1,24 +1,9 @@
-  #score {
-    display: inline-block;
-    color: pink;
-  }
-
-  #highScore {
-    display: inline-block;
-    color: pink;
-  }
-
-  #rowTally {
-    display: inline-block;
-    color: pink;
-  }
-
-  div {
+  /* div {
     font-size: 25px;
     font-weight: bold;
     font-family: monospace;
     text-align: center;
-  }
+  } */
 
   canvas {
     display: block;
@@ -31,5 +16,40 @@
   }
 
   #scoreBoard {
-    color: snow;
+    position: absolute;
+    bottom: 35px;
+    font-size: 18px;
+    top: 80px;
+    left: 150px;
+    width: 200px;
+    height: 100px;
+    border: 3px solid maroon;
+    color: whitesmoke;
+  }
+
+  #nextTetromino {
+    position: absolute;
+    bottom: 35px;
+    font-size: 18px;
+    top: 80px;
+    right: 150px;
+    width: 200px;
+    height: 100px;
+    border: 3px solid maroon;
+    color: whitesmoke;
+  }
+
+  #score {
+    display: inline-block;
+    color: whitesmoke;
+  }
+
+  #highScore {
+    display: inline-block;
+    color: whitesmoke;
+  }
+
+  #rowTally {
+    display: inline-block;
+    color: whitesmoke;
   }
