--- a/tetris.css
+++ b/tetris.css
@@ -15,11 +15,12 @@
   #scoreboard {
     margin: 10px;
     font-size: 18px;
-    line-height: 30px;
+    line-height: 50px;
     width: 150px;
     height: 150px;
     border: 3px solid maroon;
     color: whitesmoke;
+    text-align: center;
   }
 
   #next {
